Add Redis Security Best Practices Workshop
- Created a new workshop module for Redis Security Best Practices, including detailed sections on authentication, network security, and best practices.
- Developed content for each section, covering essential security measures, common pitfalls, and exercises for hands-on learning.
- Updated the main workshop README to include the new module and its objectives.
- Enhanced navigation for the workshop modules to facilitate user experience.
- Added enterprise-focused examples in the Redis Fundamentals module, showcasing use cases specific to Acme Corp.

--- a/workshops/test-workshop/.nav/02-redis-performance-optimization.html
+++ b/workshops/test-workshop/.nav/02-redis-performance-optimization.html
@@ -6,22 +6,22 @@
 <tr>
 <td width="33%" align="left">
 
-### 🏁
-**First Module**
+### [◀️ Previous](../01-redis-fundamentals/README.md)
+**Redis Fundamentals**  
+⏱️ unknown
 
 </td>
 <td width="34%" align="center">
 
 ### [🏠 Home](../../README.md)
 **Workshop Home**  
-📍 Module 1 of 2
+📍 Module 2 of 2
 
 </td>
 <td width="33%" align="right">
 
-### [Next ▶️](../02-redis-security-best-practices/README.md)
-**Redis Security Best Practices**  
-⏱️ unknown
+### 🎉
+**Last Module**
 
 </td>
 </tr>
@@ -31,8 +31,8 @@
 
 ### 📚 Workshop Modules
 
-1. **Redis Fundamentals** ← *You are here*
-2. [Redis Security Best Practices](../02-redis-security-best-practices/README.md)
+1. [Redis Fundamentals](../01-redis-fundamentals/README.md)
+2. **Redis Performance Optimization** ← *You are here*
 
 ---
 <!-- NAV:END -->
