--- a/workshops/test-workshop/.nav/01-redis-security-best-practices.html
+++ b/workshops/test-workshop/.nav/01-redis-security-best-practices.html
@@ -14,13 +14,13 @@
 
 ### [🏠 Home](../../README.md)
 **Workshop Home**  
-📍 Module 1 of 2
+📍 Module 1 of 3
 
 </td>
 <td width="33%" align="right">
 
-### [Next ▶️](../02-redis-security-best-practices/README.md)
-**Redis Security Best Practices**  
+### [Next ▶️](../02-redis-fundamentals/README.md)
+**Redis Fundamentals**  
 ⏱️ unknown
 
 </td>
@@ -31,8 +31,9 @@
 
 ### 📚 Workshop Modules
 
-1. **Redis Fundamentals** ← *You are here*
-2. [Redis Security Best Practices](../02-redis-security-best-practices/README.md)
+1. **Redis Security Best Practices** ← *You are here*
+2. [Redis Fundamentals](../02-redis-fundamentals/README.md)
+3. [Redis Performance Optimization](../03-redis-performance-optimization/README.md)
 
 ---
 <!-- NAV:END -->
