Fix workshop browser to display modules from frontmatter
- Updated renderWorkshopBrowser() to use frontmatter.modules
- Updated filterWorkshops() to use frontmatter.modules
- Module counts and durations now display correctly in browser

--- a/shared/tools/workshop-builder-gui.html
+++ b/shared/tools/workshop-builder-gui.html
@@ -1382,7 +1382,7 @@
                         description: ws.description,
                         duration: ws.duration,
                         difficulty: ws.difficulty,
-                        modules: ws.modules,
+                        modules: ws.frontmatter?.modules || ws.modules || [],
                         lastUpdated: 'From filesystem'
                     }));
                 } catch (error) {
@@ -1468,7 +1468,7 @@
                         description: ws.description,
                         duration: ws.duration,
                         difficulty: ws.difficulty,
-                        modules: ws.modules,
+                        modules: ws.frontmatter?.modules || ws.modules || [],
                         lastUpdated: 'From filesystem'
                     }));
                 } catch (error) {
