feat: Filter module browser to exclude already-added modules
Improve UX by showing only modules that haven't been added to the workshop

Changes:
- Updated renderModuleBrowser() to filter out existing modules
- Updated filterModules() to exclude already-added modules
- Added intelligent empty state messages
- Used Set-based lookup for O(1) performance

Benefits:
- Prevents confusion about which modules are available
- Eliminates duplicate addition attempts
- Clearer visual feedback to users
- Better information architecture

The duplicate check in addModule() remains as a safety net.

--- a/shared/tools/workshop-builder-gui.html
+++ b/shared/tools/workshop-builder-gui.html
@@ -2790,7 +2790,16 @@
             const container = document.getElementById('module-browser-list');
             container.innerHTML = '';
 
-            availableModules.forEach(module => {
+            // Filter out modules that are already in the workshop
+            const existingModuleRefs = new Set(workshop.modules.map(m => m.moduleRef));
+            const filteredModules = availableModules.filter(module => !existingModuleRefs.has(module.moduleRef));
+
+            if (filteredModules.length === 0) {
+                container.innerHTML = '<div style="text-align: center; padding: 2rem; color: var(--text-light);">All available modules have been added to this workshop</div>';
+                return;
+            }
+
+            filteredModules.forEach(module => {
                 const item = document.createElement('div');
                 item.className = 'module-browser-item';
                 item.innerHTML = `
@@ -2813,7 +2822,15 @@
             const container = document.getElementById('module-browser-list');
             container.innerHTML = '';
 
+            // Filter out modules that are already in the workshop
+            const existingModuleRefs = new Set(workshop.modules.map(m => m.moduleRef));
+            
             const filtered = availableModules.filter(module => {
+                // Exclude modules already in the workshop
+                if (existingModuleRefs.has(module.moduleRef)) {
+                    return false;
+                }
+                
                 const matchesSearch = module.name.toLowerCase().includes(search) || 
                                      module.description.toLowerCase().includes(search) ||
                                      module.tags.some(tag => tag.includes(search));
@@ -2822,7 +2839,10 @@
             });
 
             if (filtered.length === 0) {
-                container.innerHTML = '<div style="text-align: center; padding: 2rem; color: var(--text-light);">No modules found</div>';
+                const message = existingModuleRefs.size === availableModules.length 
+                    ? 'All available modules have been added to this workshop'
+                    : 'No modules found matching your search criteria';
+                container.innerHTML = `<div style="text-align: center; padding: 2rem; color: var(--text-light);">${message}</div>`;
                 return;
             }
 
